# SDLExperiments

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
boids/: CMakeLists.txt  README.md  boids.cpp
game_of_life/: CMakeLists.txt  README.md  gameoflife.cpp
wave_generation/: CMakeLists.txt  README.md  wave_generation.cpp
web/: CMakeLists.txt  README.md  index.html  web.cpp
